Добавил возможность отправлять забытый пароль

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -56,6 +56,7 @@
         </footer>
         {% include(':default:modal-login.html.twig') %}
         {% include(':default:modal-registration.html.twig') %}
+        {% include(':default:modal-send-again-password.html.twig') %}
     {% else %}
         {% stylesheets 'mycss/profile.css' %}
             <link rel="stylesheet" href="{{ asset_url }}" />
