--- a/app/Resources/views/default/modal-send-again-password.html.twig
+++ b/app/Resources/views/default/modal-send-again-password.html.twig
@@ -1,13 +1,13 @@
-<div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="title-login-modal" aria-hidden="true">
+<div class="modal fade" id="send-again-modal" tabindex="-1" role="dialog" aria-labelledby="title-again-modal" aria-hidden="true">
     <div class="modal-dialog ">
         <div class="modal-content">
             <div class="modal-header text-center">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h2 class="modal-title" id="title-login-modal">Авторизация</h2>
+                <h2 class="modal-title" id="title-again-modal">Забыли пароль ?</h2>
             </div>
             <div class="modal-body">
                 <div id="parent-form">
-                    <form role="form" action="{{ path('sign_in') }}" id="auth-form" method="post">
+                    <form role="form" action="{{ path('sign_in') }}" id="send-again-form" name="send-again-form" method="post">
                         <div class="form-group">
                             <label for="input-email">Email</label>
                             <div class="input-group">
@@ -17,22 +17,11 @@
                                 <span class="glyphicon form-control-feedback"></span>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label for="input-second-name">Пароль</label>
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-key"></i></span>
-                                <input type="password" class="form-control" id="input-password" name="input-password" required placeholder="Введите Ваш пароль">
-                                <span class="glyphicon form-control-feedback"></span>
-                            </div>
-                        </div>
-                        <div class="form-group text-center">
-                            <button id="send-again-password" type="button" class="btn btn-link">Забыли пароль ?</button>
-                        </div>
                     </form>
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="submit" class="btn btn-block btn-success" form="auth-form">
+                <button type="submit" class="btn btn-block btn-success" name="submit-send-again" form="send-again-form">
                     <div>
                         <i class="fa fa-sign-in fa-lg "></i>
                         <span>Отправить</span>
