--- a/app/Resources/views/email/message.html.twig
+++ b/app/Resources/views/email/message.html.twig
@@ -17,7 +17,7 @@
             color: #204d74;
             font-size: 25px;
         }
-        #body-message {
+        #body-message, a {
             margin: 50px;
         }
         #body-message span:nth-child(1), #body-message span:nth-child(3) {
@@ -39,5 +39,6 @@
         <span>Ваш логин для входа : <span>{{ info.login }}</span></span><br>
         <span>Ваш пароль для входа : <span>{{ info.password }}</span></span><br>
     </div>
+    <a href="http://http://its-assistant.com/"> Перейти на сайт</a>
 </body>
 </html>
