--- a/app/Resources/views/default/ip-calc.html.twig
+++ b/app/Resources/views/default/ip-calc.html.twig
@@ -1,31 +1,31 @@
     <div class="modal fade bs-example-modal-sm" id="ip-calc-modal" tabindex="-1" role="dialog" aria-labelledby="title-calc-modal" aria-hidden="true">
-    <div class="modal-dialog modal-sm">
+    <div class="modal-dialog modal-bg">
         <div class="modal-content">
             <div class="modal-header text-center">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h2 class="modal-title" id="title-calc-modal">IP-калькулятор</h2>
             </div>
             <div class="modal-body">
-                <form role="form" id="form-calc-IP">
+                <form role="form" id="form-calc-IP" name="form-calc-IP">
                     <div class="form-group">
                         <div class="row">
                             <div class="col-lg-12">
                                 <label for="input-ip-address">IP-адрес</label>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control input-ip-address text-center" name="input-ip-address" placeholder="192" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
+                                <input type="text" class="form-control input-ip-address text-center" name="input-ip-address-1" placeholder="192" maxlength="3" size="4" pattern="[0-9]{1,3}" required>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control input-ip-address text-center" name="input-ip-address" placeholder="168" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
+                                <input type="text" class="form-control input-ip-address text-center" name="input-ip-address-2" placeholder="168" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control input-ip-address text-center" name="input-ip-address" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
+                                <input type="text" class="form-control input-ip-address text-center" name="input-ip-address-3" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control input-ip-address text-center"  name="input-ip-address" placeholder="1" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
+                                <input type="text" class="form-control input-ip-address text-center"  name="input-ip-address-4" placeholder="1" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
                                 <span class="hidden">.</span>
                             </div>
                         </div>
@@ -34,24 +34,24 @@
                                 <label for="input-mask-subnetwork">Маска подсети</label>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control input-mask-subnetwork text-center" name="input-mask-subnetwork" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
+                                <input type="text" class="form-control input-mask-subnetwork text-center" name="input-mask-subnetwork-1" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control input-mask-subnetwork text-center" name="input-mask-subnetwork" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
+                                <input type="text" class="form-control input-mask-subnetwork text-center" name="input-mask-subnetwork-2" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control input-mask-subnetwork text-center" name="input-mask-subnetwork" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
+                                <input type="text" class="form-control input-mask-subnetwork text-center" name="input-mask-subnetwork-3" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control input-mask-subnetwork text-center" name="input-mask-subnetwork"  placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
+                                <input type="text" class="form-control input-mask-subnetwork text-center" name="input-mask-subnetwork-4"  placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" required>
                                 <span class="hidden">.</span>
                             </div>
                             <div class="сol-lg-12 text-center"><span>или</span></div>
                             <div class="col-lg-offset-4 col-lg-4">
-                                <input type="text" class="form-control input-mask-subnetwork text-center" name="input-mask-subnetwork" id="number-one-in-mask" placeholder="/24" maxlength="3" pattern="\d{1,3}">
+                                <input type="text" class="form-control input-mask-subnetwork text-center" name="input-mask-subnetwork-5" id="number-one-in-mask" placeholder="/24" maxlength="3" pattern="\d{1,3}">
                                 <span class="hidden">.</span>
                             </div>
                         </div>
@@ -60,19 +60,40 @@
                                 <label for="output-ip-address">Номер сети</label>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address-1" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address-2" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address-3" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address-4" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <span class="hidden">.</span>
+                            </div>
+                        </div>
+                        <div class="row hidden" id="broadcast">
+                            <div class="col-lg-12">
+                                <label for="output-ip-address">Широковещательный адрес</label>
+                            </div>
+                            <div class="col-lg-3">
+                                <input type="text" class="form-control broadcast text-center" name="broadcast-1" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <span>.</span>
+                            </div>
+                            <div class="col-lg-3">
+                                <input type="text" class="form-control broadcast text-center" name="broadcast-2" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <span>.</span>
+                            </div>
+                            <div class="col-lg-3">
+                                <input type="text" class="form-control broadcast text-center" name="broadcast-3" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <span>.</span>
+                            </div>
+                            <div class="col-lg-3">
+                                <input type="text" class="form-control broadcast text-center" name="broadcast-4" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span class="hidden">.</span>
                             </div>
                         </div>
