--- a/app/Resources/views/default/ip-calc.html.twig
+++ b/app/Resources/views/default/ip-calc.html.twig
@@ -78,7 +78,7 @@
                         </div>
                         <div class="row hidden" id="broadcast">
                             <div class="col-lg-12">
-                                <label for="output-ip-address">Широковещательный адрес</label>
+                                <label for="broadcast">Широковещательный адрес</label>
                             </div>
                             <div class="col-lg-3">
                                 <input type="text" class="form-control broadcast text-center" name="broadcast-1" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
@@ -94,6 +94,48 @@
                             </div>
                             <div class="col-lg-3">
                                 <input type="text" class="form-control broadcast text-center" name="broadcast-4" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <span class="hidden">.</span>
+                            </div>
+                        </div>
+                        <div class="row hidden" id="wildcard">
+                            <div class="col-lg-12">
+                                <label for="wildcard">Обратная маска</label>
+                            </div>
+                            <div class="col-lg-3">
+                                <input type="text" class="form-control wildcard text-center" name="wildcard-1" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <span>.</span>
+                            </div>
+                            <div class="col-lg-3">
+                                <input type="text" class="form-control wildcard text-center" name="wildcard-2" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <span>.</span>
+                            </div>
+                            <div class="col-lg-3">
+                                <input type="text" class="form-control wildcard text-center" name="wildcard-3" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <span>.</span>
+                            </div>
+                            <div class="col-lg-3">
+                                <input type="text" class="form-control wildcard text-center" name="wildcard-4" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <span class="hidden">.</span>
+                            </div>
+                        </div>
+                        <div class="row hidden" id="first-host">
+                            <div class="col-lg-12">
+                                <label for="first-host">Обратная маска</label>
+                            </div>
+                            <div class="col-lg-3">
+                                <input type="text" class="form-control first-host text-center" name="first-host-1" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <span>.</span>
+                            </div>
+                            <div class="col-lg-3">
+                                <input type="text" class="form-control first-host text-center" name="first-host-2" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <span>.</span>
+                            </div>
+                            <div class="col-lg-3">
+                                <input type="text" class="form-control first-host text-center" name="first-host-3" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <span>.</span>
+                            </div>
+                            <div class="col-lg-3">
+                                <input type="text" class="form-control first-host text-center" name="first-host-4" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span class="hidden">.</span>
                             </div>
                         </div>
