--- a/app/Resources/views/default/ip-calc.html.twig
+++ b/app/Resources/views/default/ip-calc.html.twig
@@ -120,7 +120,7 @@
                         </div>
                         <div class="row hidden" id="first-host">
                             <div class="col-lg-12">
-                                <label for="first-host">Обратная маска</label>
+                                <label for="first-host">Первый хост</label>
                             </div>
                             <div class="col-lg-3">
                                 <input type="text" class="form-control first-host text-center" name="first-host-1" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
@@ -136,6 +136,27 @@
                             </div>
                             <div class="col-lg-3">
                                 <input type="text" class="form-control first-host text-center" name="first-host-4" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <span class="hidden">.</span>
+                            </div>
+                        </div>
+                        <div class="row hidden" id="last-host">
+                            <div class="col-lg-12">
+                                <label for="last-host">Первый хост</label>
+                            </div>
+                            <div class="col-lg-3">
+                                <input type="text" class="form-control last-host text-center" name="last-host-1" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <span>.</span>
+                            </div>
+                            <div class="col-lg-3">
+                                <input type="text" class="form-control last-host text-center" name="last-host-2" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <span>.</span>
+                            </div>
+                            <div class="col-lg-3">
+                                <input type="text" class="form-control last-host text-center" name="last-host-3" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <span>.</span>
+                            </div>
+                            <div class="col-lg-3">
+                                <input type="text" class="form-control last-host text-center" name="last-host-4" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span class="hidden">.</span>
                             </div>
                         </div>
