--- a/app/Resources/views/default/ip-calc.html.twig
+++ b/app/Resources/views/default/ip-calc.html.twig
@@ -60,15 +60,15 @@
                                 <label for="output-ip-address">Номер сети</label>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address-1" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address-1" placeholder="192" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address-2" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address-2" placeholder="168" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address-3" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control output-ip-address text-center" name="output-ip-address-3" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
@@ -81,19 +81,19 @@
                                 <label for="broadcast">Широковещательный адрес</label>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control broadcast text-center" name="broadcast-1" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control broadcast text-center" name="broadcast-1" placeholder="192" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control broadcast text-center" name="broadcast-2" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control broadcast text-center" name="broadcast-2" placeholder="168" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control broadcast text-center" name="broadcast-3" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control broadcast text-center" name="broadcast-3" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control broadcast text-center" name="broadcast-4" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control broadcast text-center" name="broadcast-4" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span class="hidden">.</span>
                             </div>
                         </div>
@@ -102,19 +102,19 @@
                                 <label for="wildcard">Обратная маска</label>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control wildcard text-center" name="wildcard-1" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control wildcard text-center" name="wildcard-1" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control wildcard text-center" name="wildcard-2" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control wildcard text-center" name="wildcard-2" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control wildcard text-center" name="wildcard-3" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control wildcard text-center" name="wildcard-3" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control wildcard text-center" name="wildcard-4" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control wildcard text-center" name="wildcard-4" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span class="hidden">.</span>
                             </div>
                         </div>
@@ -123,40 +123,40 @@
                                 <label for="first-host">Первый хост</label>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control first-host text-center" name="first-host-1" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control first-host text-center" name="first-host-1" placeholder="192" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control first-host text-center" name="first-host-2" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control first-host text-center" name="first-host-2" placeholder="168" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control first-host text-center" name="first-host-3" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control first-host text-center" name="first-host-3" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control first-host text-center" name="first-host-4" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control first-host text-center" name="first-host-4" placeholder="1" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span class="hidden">.</span>
                             </div>
                         </div>
                         <div class="row hidden" id="last-host">
                             <div class="col-lg-12">
-                                <label for="last-host">Первый хост</label>
+                                <label for="last-host">Последний хост</label>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control last-host text-center" name="last-host-1" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control last-host text-center" name="last-host-1" placeholder="192" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control last-host text-center" name="last-host-2" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control last-host text-center" name="last-host-2" placeholder="168" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control last-host text-center" name="last-host-3" placeholder="255" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control last-host text-center" name="last-host-3" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span>.</span>
                             </div>
                             <div class="col-lg-3">
-                                <input type="text" class="form-control last-host text-center" name="last-host-4" placeholder="0" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
+                                <input type="text" class="form-control last-host text-center" name="last-host-4" placeholder="254" maxlength="3" size="3" pattern="[0-9]{1,3}" readonly>
                                 <span class="hidden">.</span>
                             </div>
                         </div>
