add action logout

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -87,6 +87,7 @@
                 <ul>
                     <li><a href="#" class="fa fa-refresh" title="Обновить"></a></li>
                     <li><a href="#" class="fa fa-comment" title="Обратная связь"></a></li>
+                    <li><a href="#" class="fa fa-sign-out" id="logout" title="Выйти"></a></li>
 
                     {#<li><a href="#" class="fa fa-vk fa-3x">VK</a></li>#}
                     {#<li><a href="#" class="fa fa-facebook fa-3x">Facebook</a></li>#}
