--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -128,6 +128,9 @@
             </div>
         </div>
         {% include(':default:ip-calc.html.twig') %}
+        {% include(':default:card-carno.html.twig') %}
+        {% include(':default:diagram-modal.html.twig') %}
+        {% include(':default:master-report.html.twig') %}
         {% javascripts
             'myjs/AnimatedBorderMenu/classie.js'
             'myjs/AnimatedBorderMenu/borderMenu.js'
