реализовал мастер отчетов

--- a/app/Resources/views/default/card-carno.html.twig
+++ b/app/Resources/views/default/card-carno.html.twig
@@ -12,6 +12,19 @@
                         <input type="number" class="form-control" id="input-boolean-value" placeholder="10110001">
                     </div>
                 </form>
+
+                <div class="panel panel-default">
+                    <!-- Default panel contents -->
+                    <div class="panel-heading">Panel heading</div>
+                    <div class="panel-body">
+                        <p>...</p>
+                    </div>
+
+                    <!-- Table -->
+                    <table class="table">
+                        ...
+                    </table>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
