--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -137,6 +137,7 @@
             'myjs/jquery.easing.1.3.js'
             'myjs/indexPage.js'
             'myjs/ip-calc.js'
+            'myjs/master-report.js'
         %}
             <script defer src="{{ asset_url }}"></script>
         {% endjavascripts %}
