--- a/app/Resources/views/default/master-report.html.twig
+++ b/app/Resources/views/default/master-report.html.twig
@@ -6,36 +6,40 @@
                 <h2 class="modal-title" id="title-master-report-modal">Мастер-отчетов</h2>
             </div>
             <div class="modal-body">
-                <form role="form" id="form-master-report">
+                <form role="form" action="{{ path('create_report') }}" method="post" id="form-master-report">
                     <div class="form-group">
                         <label for="all-name">Ф.И.О</label>
-                        <input type="text" class="form-control" id="all-name" placeholder="Введите Вашу Ф.И.О">
+                        <input type="text" class="form-control" name="full-name" id="all-name" placeholder="Введите Вашу Ф.И.О" required>
                     </div>
                     <div class="form-group">
                         <label for="all-name">Группа</label>
-                        <input type="text" class="form-control" id="all-name" placeholder="Введите Вашу группу">
+                        <input type="text" class="form-control" name="group" id="all-name" placeholder="Введите Вашу группу" required>
                     </div>
                     <div class="form-group">
                         <label for="all-name">Ф.И.О преподавателя</label>
-                        <input type="text" class="form-control" id="all-name" placeholder="Введите Ф.И.О преподавателя">
+                        <input type="text" class="form-control" name="teacher" id="all-name" placeholder="Введите Ф.И.О преподавателя" required>
                     </div>
                     <div class="form-group">
                         <label for="all-name">Название предмета</label>
-                        <input type="text" class="form-control" id="all-name" placeholder="Введите название предмета">
+                        <input type="text" class="form-control" name="name-subject" id="all-name" placeholder="Введите название предмета" required>
                     </div>
                     <div class="form-group">
                         <label for="all-name">Тип и номер сдаваемой работы</label>
-                        <input type="text" class="form-control" id="all-name" placeholder="Введите тип и номер сдаваемой работы ">
+                        <input type="text" class="form-control" name="type-and-number" id="all-name" placeholder="Введите тип и номер сдаваемой работы " required>
                     </div>
                     <div class="form-group">
                         <label for="all-name">Название сдаваемой работы</label>
-                        <input type="text" class="form-control" id="all-name" placeholder="Введите название сдаваемой работы ">
+                        <input type="text" class="form-control" name="name-report" id="all-name" placeholder="Введите название сдаваемой работы " required>
+                    </div>
+                    <div class="form-group">
+                        <label for="variant">Вариант</label>
+                        <input type="text" class="form-control" name="variant" id="variant" placeholder="Введите Ваг вариант" required>
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
-                <button type="button" class="btn btn-primary" type="submit" form="form-master-report" id="download-report">Скачать</button>
+                <button class="btn btn-primary" type="submit" form="form-master-report" id="download-report">Скачать</button>
             </div>
         </div>
     </div>
